horizontal scrolling issue

--- a/src/weatherPage.css
+++ b/src/weatherPage.css
@@ -9,7 +9,7 @@
 }
 
 .language-dropdown {
-  padding: 6px 10px;
+  padding: 6px 6px;
   border-radius: 6px;
   border: 1px solid rgba(255, 255, 255, 0.4); 
   font-size: 1rem;
@@ -18,6 +18,8 @@
   color: #fff;                              
   backdrop-filter: blur(6px);                
   transition: all 0.2s ease;
+  position: relative;
+  left: -15px;
 }
 
 .language-dropdown:hover {
@@ -191,3 +193,6 @@ body {
   transform: translateX(-50%) scale(1.1);  
 }
 
+.no-scroll {
+  overflow-x: hidden; 
+}
